Bug 75369 - Start Center: Non-installed applications aren't greyed out (4.2 regression)
Summary: Start Center: Non-installed applications aren't greyed out (4.2 regression)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other Linux (All)
: low normal
Assignee: Akshay Deep
URL:
Whiteboard: target:5.3.0
Keywords:
: 75918 79835 87282 93152 98179 99354 101191 131592 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2014-02-22 13:31 UTC by Gabriel Diosan
Modified: 2020-04-15 13:28 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of startcenter on Ubuntu Gnome 14.04 (88.76 KB, image/png)
2014-02-22 13:31 UTC, Gabriel Diosan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Diosan 2014-02-22 13:31:53 UTC
Created attachment 94568 [details]
Screenshot of startcenter on Ubuntu Gnome 14.04

Problem description: Applications in the Libreoffice suite not installed appear the same as those that are installed when viewing in the startcenter.

Steps to reproduce:
1. Open the startcenter in Libreoffice 4.2
2. If Libreoffice Base is not installed (for example in Ubuntu it is not installed by default) it still appears like the other applications that are installed on the system.
3. Click on Libreoffice Writer or other installed parts of the suite and they launch, click on an application in the suite that is not installed and you get nothing but confusion.

Current behavior: Applications in the Libreoffice suite that are not installed are not greyed out or there is no indication that they are not installed on the system.

Expected behavior: Applications in the Libreoffice suite that are not installed on the system should show up differently in the startcenter so that the user understands that the application is not installed.
Comment 1 Urmas 2014-02-22 15:24:03 UTC
Installing applications from LO suite separately is not supported.
Comment 2 Adolfo Jayme Barrientos 2014-02-23 18:04:56 UTC
(Editing this bug’s title for improved clarity and reopening)
Comment 3 retired 2014-02-23 18:24:48 UTC
Hi Gabriel, in the future there will be "non-installed applications" since LO will install everything. so NOTABUG

I'm confused, on OSX no selection as well, so is this only Linux?

On linux can users select components?! i don't think so, but might be wrong.

Can we elaborate what is being discussed here? Setting to Linux only.

I assume we should change title to "disallow de-selecting LO components on Linux"?
Comment 4 retired 2014-02-23 18:25:51 UTC
no editing: there will be *no* ...
Comment 5 Adolfo Jayme Barrientos 2014-02-23 18:38:02 UTC
@Foss: Debian/Ubuntu packaging allows for “split packages” so you can remove individual applications.
Comment 6 Gabriel Diosan 2014-02-24 02:30:17 UTC
Hi

On Linux some of the Libreoffice applications are not installed by default. For example in the Ubuntu Gnome install, Libreoffice Base and Math are not installed. This depends on the distribution and how they choose to package Libreoffice.

I also have an install of Libreoffice on a Windows machine. Previously I had Libreoffice 4.1.4 installed with only Writer, Calc, Impress and Draw (custom install). When I installed 4.2.1 on the same system, I selected the custom install and I noticed that again I only had Writer, Calc, Impress and Draw but no Base or Math. This could also result in the problem I mentioned in my initial bug report.
Comment 7 Adolfo Jayme Barrientos 2014-03-08 21:09:00 UTC
*** Bug 75918 has been marked as a duplicate of this bug. ***
Comment 8 Maxim Monastirsky 2014-06-09 11:55:07 UTC
*** Bug 79835 has been marked as a duplicate of this bug. ***
Comment 9 Axel Howind 2014-06-09 12:08:30 UTC
@Foss: 

> Hi Gabriel, in the future there will be "non-installed applications" since LO will install everything. so NOTABUG

It is broken *now*, so to my understanding it is a bug. If in the future there will be no "non-installed applications", the bug can be closed.

IMHO the importance of bugs like this should at *least* be "medium". While it's perhaps not an issue for anyone with an up-and-running installation, new users will try it, see it doesn't work (and what's worse there's no hint why), and uninstall the complete LibreOffice suite.

It might have low impact on current users, but it has high impact on the acceptance by new users and what in my company we call "reputation risk".
Comment 10 Julien Nabet 2014-12-13 13:57:38 UTC
*** Bug 87282 has been marked as a duplicate of this bug. ***
Comment 11 Maxim Monastirsky 2015-08-05 22:30:19 UTC
*** Bug 93152 has been marked as a duplicate of this bug. ***
Comment 12 tommy27 2015-11-01 07:53:02 UTC
please Linux users, tell the current status of this bug.
is it still possible to make selective installation of the various LibO modules in current LibO 4.5.x and 5.0.x releases?

if yes, keep the status NEW
if not, set the status as RESOLVED NOTABUG
Comment 13 Adolfo Jayme Barrientos 2015-11-01 13:48:16 UTC
> is it still possible to make selective installation of the various LibO
> modules in current LibO 4.5.x and 5.0.x releases?

Why is that relevant? That is the package manager’s bussiness. =)

Of course, there is no change in the statu quo of this bug. What’s the rush on closing it?
Comment 14 tommy27 2015-11-01 18:09:23 UTC
@Adolfo 
I asked a different thing and I don't see a clear answer in your last comment.

AFAIK in Windows is not possible to do selective module installation... correct me if I'm wrong... so I was wondering if the same applies to Linux as well...

if selective installation has been removed from Linux too, this bug has no reason to exist, but if that option is still available the bug is still valid.

so just answer YES or NO to comment 12
Comment 15 Adolfo Jayme Barrientos 2015-11-02 20:44:10 UTC
> so just answer YES or NO to comment 12

Your answer is in comment 5 already.
Comment 16 tommy27 2015-11-02 21:59:28 UTC
thanks, I missed that comment.
Comment 17 Maxim Monastirsky 2016-03-06 11:36:58 UTC
*** Bug 98179 has been marked as a duplicate of this bug. ***
Comment 18 Adolfo Jayme Barrientos 2016-04-17 08:21:55 UTC
*** Bug 99354 has been marked as a duplicate of this bug. ***
Comment 19 Commit Notification 2016-06-17 10:39:45 UTC
Akshay Deep committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80cb33570557010547a08b5b1cd6bc0c1ee018fc

tdf#75369 Start Center: Non-installed applications aren't greyed out

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Samuel Mehrbrodt 2016-07-29 12:11:26 UTC
*** Bug 101191 has been marked as a duplicate of this bug. ***
Comment 21 Alex Thurgood 2020-04-15 13:28:57 UTC
*** Bug 131592 has been marked as a duplicate of this bug. ***